--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>登录</title>
+    <link rel="stylesheet" type="text/css" href="login.css">
 </head>
 
 <body>
@@ -8,13 +9,15 @@
         <form>
             <table>
                 <tr>
-                    <td><input type="text" name="username">昵称</text></td>
+                    <td>账号</td>
+                    <td><input type="text" name="username"></text></td>
                 </tr>  
                 <tr>
-                    <td><input type="password" name="password">密码</td>
+                    <td>密码</td>>
+                    <td><input type="password" name="password"></td>
                 </tr>  
                 <tr>
-                    <td><button type="submit" value="登录"></button></td>
+                    <td><button type="submit" name="登录"></button></td>
                 </tr>  
             </table>
         </form>
