update login css

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
-<head>
-    <title>登录</title>
-    <link rel="stylesheet" type="text/css" href="login.css">
-</head>
+<html>
+    <head>
+        <title>登录</title>
+        <link rel="stylesheet" type="text/css" href="../static/login.css">
+    </head>
+    <body>
+        <div class="div-center">
+            <form>
+                    <div class="form-group">
+                        <div>账号</div>
+                        <input type="text">
+                    </div>
 
-<body>
-    <div name="login_content">
-        <form>
-            <table>
-                <tr>
-                    <td>账号</td>
-                    <td><input type="text" name="username"></text></td>
-                </tr>  
-                <tr>
-                    <td>密码</td>>
-                    <td><input type="password" name="password"></td>
-                </tr>  
-                <tr>
-                    <td><button type="submit" name="登录"></button></td>
-                </tr>  
-            </table>
-        </form>
-    </div>
-</body>
+                    <div class="form-group">
+                        <div>密码</div>
+                        <input type="password">
+                    </div>
+            </form>
+        </div>
+    </body>
+</html>
