--- a/static/login.css
+++ b/static/login.css
@@ -4,3 +4,11 @@ body{
     background-attachment:fixed;
     background-color:#CCCCCC;
  }
+
+ .div-center{
+    background-color: rgb(120, 155, 230, 50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%, -50%);
+ }
